# zftop

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs  install.sh
aur/: PKGBUILD
fixtures/: arcstats  meminfo
fixtures/bsd/: arcstats.freebsd.txt  hw-mem.freebsd.txt  vm-stats.freebsd.txt
fixtures/golden/: arc_view_content_v0_1.txt
scripts/: bsd-build.sh  setup-bsd-ci.sh
src/: app.rs  arcstats.rs  main.rs  meminfo.rs  ui.rs
src/arcstats/: freebsd.rs  linux.rs  mod.rs
src/datasets/: fake.rs  libzfs.rs
src/meminfo/: freebsd.rs  linux.rs  mod.rs
src/pools/: fake.rs  ffi.rs  libzfs.rs  mod.rs  types.rs
src/ui/: arc_view.rs  datasets_detail.rs  datasets_tree.rs  mod.rs  overview.rs  pools_detail.rs  pools_list.rs  pools_tree.rs  widgets.rs
tests/: cli_help.rs
